// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`marginInlineStart renders 0 1`] = `
Array [
  .c0 {
  margin-inline-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-start: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`marginInlineStart renders function 1`] = `
Array [
  .c0 {
  margin-inline-start: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-start: has;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-start: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-start: has;
}

<div
    className="c0"
  />,
]
`;

exports[`marginInlineStart renders invalid theme path 1`] = `
Array [
  .c0 {
  margin-inline-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-start: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`marginInlineStart renders negative number 1`] = `
Array [
  .c0 {
  margin-inline-start: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-start: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-start: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-start: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`marginInlineStart renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  margin-inline-start: July;
}

@media screen and (min-width:November) {
  .c0 {
    margin-inline-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-inline-start: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-inline-start: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-inline-start: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-start: July;
}

@media screen and (min-width:November) {
  .c0 {
    margin-inline-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-inline-start: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-inline-start: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-inline-start: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-start: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    margin-inline-start: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-inline-start: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-inline-start: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-inline-start: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-start: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    margin-inline-start: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-inline-start: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-inline-start: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-inline-start: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marginInlineStart renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    margin-inline-start: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-inline-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-inline-start: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-inline-start: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    margin-inline-start: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-inline-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-inline-start: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-inline-start: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    margin-inline-start: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-inline-start: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-inline-start: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-inline-start: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    margin-inline-start: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-inline-start: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-inline-start: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-inline-start: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marginInlineStart renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  margin-inline-start: July;
}

@media May {
  .c0 {
    margin-inline-start: August;
  }
}

@media April {
  .c0 {
    margin-inline-start: September;
  }
}

@media January {
  .c0 {
    margin-inline-start: November;
  }
}

@media April {
  .c0 {
    margin-inline-start: August;
  }
}

@media June {
  .c0 {
    margin-inline-start: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-start: July;
}

@media May {
  .c0 {
    margin-inline-start: August;
  }
}

@media April {
  .c0 {
    margin-inline-start: September;
  }
}

@media January {
  .c0 {
    margin-inline-start: November;
  }
}

@media April {
  .c0 {
    margin-inline-start: August;
  }
}

@media June {
  .c0 {
    margin-inline-start: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-start: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    margin-inline-start: November;
  }
}

@media April {
  .c0 {
    margin-inline-start: January;
  }
}

@media January {
  .c0 {
    margin-inline-start: December;
  }
}

@media April {
  .c0 {
    margin-inline-start: April;
  }
}

@media June {
  .c0 {
    margin-inline-start: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-start: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    margin-inline-start: November;
  }
}

@media April {
  .c0 {
    margin-inline-start: January;
  }
}

@media January {
  .c0 {
    margin-inline-start: December;
  }
}

@media April {
  .c0 {
    margin-inline-start: April;
  }
}

@media June {
  .c0 {
    margin-inline-start: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marginInlineStart renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    margin-inline-start: July;
  }
}

@media April {
  .c0 {
    margin-inline-start: August;
  }
}

@media January {
  .c0 {
    margin-inline-start: September;
  }
}

@media April {
  .c0 {
    margin-inline-start: November;
  }
}

@media June {
  .c0 {
    margin-inline-start: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    margin-inline-start: July;
  }
}

@media April {
  .c0 {
    margin-inline-start: August;
  }
}

@media January {
  .c0 {
    margin-inline-start: September;
  }
}

@media April {
  .c0 {
    margin-inline-start: November;
  }
}

@media June {
  .c0 {
    margin-inline-start: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    margin-inline-start: January;
  }
}

@media April {
  .c0 {
    margin-inline-start: December;
  }
}

@media January {
  .c0 {
    margin-inline-start: April;
  }
}

@media April {
  .c0 {
    margin-inline-start: May;
  }
}

@media June {
  .c0 {
    margin-inline-start: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    margin-inline-start: January;
  }
}

@media April {
  .c0 {
    margin-inline-start: December;
  }
}

@media January {
  .c0 {
    margin-inline-start: April;
  }
}

@media April {
  .c0 {
    margin-inline-start: May;
  }
}

@media June {
  .c0 {
    margin-inline-start: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marginInlineStart renders postitive number 1`] = `
Array [
  .c0 {
  margin-inline-start: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-start: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-start: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-start: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`marginInlineStart renders string 1`] = `
Array [
  .c0 {
  margin-inline-start: July;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-start: July;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-start: June;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-start: June;
}

<div
    className="c0"
  />,
]
`;

exports[`marginInlineStart renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`marginInlineStart renders valid theme path 1`] = `
Array [
  .c0 {
  margin-inline-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  margin-inline-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
